Ran Optgene and optknock + Added Optknock secton in report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -216,7 +216,7 @@
        "<a href='1._Add_Psilocybin_to_Coynebacterium_Model.ipynb' target='_blank'>1._Add_Psilocybin_to_Coynebacterium_Model.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
       ]
      },
      "execution_count": 2,
@@ -247,7 +247,7 @@
        "<a href='5._Predict_heterologous_pathways.ipynb' target='_blank'>5._Predict_heterologous_pathways.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
       ]
      },
      "execution_count": 3,
@@ -277,7 +277,7 @@
        "Path (<tt></tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum"
       ]
      },
      "execution_count": 4,
@@ -316,7 +316,7 @@
        "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
       ]
      },
      "execution_count": 5,
@@ -332,7 +332,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**OptKnock**? Didn't we test this as well? I can't find the code..."
+    "**OptKnock**\n",
+    "\n",
+    "As with Optgene, Optknock attempt to improve the production of the desired product. However, contrary to Optgene, Optknock doesn't optimize genes, but completely knocksout non-essential genes in the hope, that it will increase the flux towards the desired product. We tried running the Optknock command, but as with Optgene no results came up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"7_Gene_Optimization.ipynb\")"
    ]
   },
   {
@@ -346,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,10 +380,10 @@
        "<a href='6._Cofactor_swapping.ipynb' target='_blank'>6._Cofactor_swapping.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +396,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Discussion (<500 words)"
+    "## 5. Discussion (<500 words)\n",
+    "\n",
+    " - Something about the recently published model"
    ]
   },
   {
