--- a/9._Yields_for_Original_And_Upregulated.ipynb
+++ b/9._Yields_for_Original_And_Upregulated.ipynb
@@ -392,7 +392,7 @@
    "id": "d40a6bfc",
    "metadata": {},
    "source": [
-    "The solver says this is infeasible, but when running it again, it says it's fine. The production rate here is certainly more desirable, and reflects that at least some of the selected genes have can be upregulated to improve psilocybin production."
+    "The solver says this is infeasible, but when running it again, it says it's fine. The production rate here is certainly more desirable, and reflects that at least some of the selected genes can be upregulated to improve psilocybin production."
    ]
   },
   {
