set bounds for up-regulation more realsitic low=high bound - no increased yield

--- a/Manually_selected_targets.ipynb
+++ b/Manually_selected_targets.ipynb
@@ -120,8 +120,8 @@
     "    model.reactions.TRPt2rpp.bounds = 0, 0\n",
     "    model.reactions.TRPabcpp.bounds = 0, 0\n",
     "    model.reactions.get_by_id(\"PROTEIN\").bounds = 0, 0\n",
-    "    model.reactions.TRPS2.bounds = 100, 100\n",
-    "    model.reactions.TRPS1.bounds = 100, 100\n",
+    "    model.reactions.TRPS2.lower_bound = model.reactions.TRPS2.upper_bound\n",
+    "    model.reactions.TRPS1.lower_bound = model.reactions.TRPS1.upper_bound\n",
     "    model.reactions.TRPTRS.bounds = 0, 0\n",
     "    print('Knocking everything out besides CrTdc reaction and synthesis reactions, which goes towards our product: ', model.optimize().objective_value, 'mmol/gDW*h')\n"
    ]
@@ -212,12 +212,12 @@
      "output_type": "stream",
      "text": [
       "TRPabcpp 0.0\n",
-      "TRPt2rpp 0.0\n",
-      "TRPTRS 0.0\n",
-      "TRPS1 0.0\n",
-      "TRPS2 0.0\n",
-      "PROTEIN 0.0\n",
-      "CrTdc 100.0\n"
+      "TRPt2rpp 5.6929988370828415e-05\n",
+      "TRPTRS 5.6929988370828415e-05\n",
+      "TRPS1 5.6929988370828415e-05\n",
+      "TRPS2 5.6929988370828415e-05\n",
+      "PROTEIN 3.5236570605778894e-19\n",
+      "CrTdc 5.69299883708285e-05\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
     "for reaction_id in tryptophan_reactions_c:\n",
     "   with model:\n",
     "        model.objective = model.reactions.EX_psi_e # setting objective to our product\n",
-    "        model.reactions.get_by_id(reaction_id).bounds = 100, 100 # forcing the model to overproduce the respective reaction\n",
+    "        model.reactions.get_by_id(reaction_id).lower_bound = model.reactions.get_by_id(reaction_id).upper_bound # forcing the model to overexpress the respective reaction\n",
     "        production_overproduction.append(model.optimize().objective_value)\n",
     "        print(reaction_id, model.optimize().objective_value)\n",
     "    "
@@ -271,43 +271,43 @@
        "      <th>0</th>\n",
        "      <td>TRPabcpp</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>TRPt2rpp</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.692999e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TRPTRS</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.692999e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>TRPS1</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.692999e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>TRPS2</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.692999e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>PROTEIN</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.523657e-19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>CrTdc</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>5.692999e-05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -324,13 +324,13 @@
        "6       CrTdc                                           0.000000      \n",
        "\n",
        "   psilocybin_production [mmol/gDW*h], when over-produced  \n",
-       "0                                                0.0       \n",
-       "1                                                0.0       \n",
-       "2                                                0.0       \n",
-       "3                                                0.0       \n",
-       "4                                                0.0       \n",
-       "5                                                0.0       \n",
-       "6                                              100.0       "
+       "0                                       0.000000e+00       \n",
+       "1                                       5.692999e-05       \n",
+       "2                                       5.692999e-05       \n",
+       "3                                       5.692999e-05       \n",
+       "4                                       5.692999e-05       \n",
+       "5                                       3.523657e-19       \n",
+       "6                                       5.692999e-05       "
       ]
      },
      "execution_count": 10,
@@ -356,7 +356,7 @@
    "id": "850b314b",
    "metadata": {},
    "source": [
-    "None of single-knockouts changed the theoretical max yield of psilocybin. Overproduction of CrTdc gives a value of 100 [mmol/gDW*h]. CrTdc represents the first step of the heterologous pathway, which was introduced to iCW773. Overproduction of CrTdc results in the only increased max. yield. Even if this looks promising, overproduction to such a high flux might be unrealistic. No production of Protein or tryptophan_t_RNA would take place anymore. The over-production of the first step of the heterologous pathways, and also other reactions of this pathway, is the most obvious strategy."
+    "None of single-knockouts changed the theoretical max yield of psilocybin. Overproduction was simulated by setting the lower bound of each target (reaction influencing L-tryptophan by either production or usage of L-tryptophan) to the level of the higher bound. With this the model is forced to push flux toward this direction, but still is not resulting in highly unrealistic results, since the boundaries for iCW773 seemed to be realistic (numbers showed exact numbers like e.g. 77.8763742).However the highest theoretical max. yield is not higher than the one calculated before introducing gene modulation. "
    ]
   },
   {
