testing low=high also for targets identified before by computing --> no increase via single overproduction

--- a/Manually_selected_targets.ipynb
+++ b/Manually_selected_targets.ipynb
@@ -395,8 +395,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ae96cb52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACHMSC 5.69299883708285e-05\n",
+      "G1PACT 5.69299883708285e-05\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tamwei\\Anaconda3\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PGAMT 5.69299883708285e-05\n",
+      "SERAT 9.754102287778158e-16\n",
+      "MTHFR2 5.69299883708285e-05\n",
+      "GLNS 0.0\n",
+      "CYSTL 0.0\n",
+      "HSST 0.0\n",
+      "METS 0.0\n",
+      "ADK1 5.69299883708285e-05\n",
+      "CYTK1 8.245815711310094e-16\n",
+      "CYTK2 8.245815711310094e-16\n",
+      "GK1 0.0\n",
+      "NDPK1 5.69299883708285e-05\n",
+      "RNDR3 0.0\n",
+      "CTPS2 0.0\n",
+      "GMPS2 0.0\n",
+      "CrTdc 5.692998837081298e-05\n",
+      "psiH 5.692998837081298e-05\n",
+      "psiK 5.692998837081298e-05\n",
+      "psiM 5.692998835127305e-05\n",
+      "psiM2 5.6929988431875245e-05\n",
+      "psitpp 5.692998831818841e-05\n",
+      "EX_psi_e 5.692998831818841e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Overexpression of all targets identified within FSEOF\n",
+    "targets = ['ACHMSC', 'G1PACT','PGAMT','SERAT','MTHFR2','GLNS','CYSTL','HSST','METS','ADK1','CYTK1','CYTK2','GK1','NDPK1','RNDR3','CTPS2','GMPS2','CrTdc','psiH','psiK','psiM','psiM2','psitpp','EX_psi_e']\n",
+    "production_overproduction_targets = []\n",
+    "for reaction_id in targets:\n",
+    "   with model:\n",
+    "        model.objective = model.reactions.EX_psi_e # setting objective to our product\n",
+    "        model.reactions.get_by_id(reaction_id).lower_bound = model.reactions.get_by_id(reaction_id).upper_bound # forcing the model to overexpress the respective reaction\n",
+    "        production_overproduction_targets.append(model.optimize().objective_value)\n",
+    "        print(reaction_id, model.optimize().objective_value)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bd2aa16",
+   "metadata": {},
+   "source": [
+    "Testing overexpression of identified targets (via FSEOF), does also not result in higher theoretical max yield. The highest achieved yield is ~5.7e-05 and thus not increased to the original yield."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c002f9d8",
    "metadata": {},
    "outputs": [],
    "source": []
