--- a/Report.ipynb
+++ b/Report.ipynb
@@ -179,18 +179,18 @@
     "### Cell engineering strategies tested for the production of psilocybin in *C. glutamicum*\n",
     "Different strategies were used in order to achieve and optimize the production of psilocybin via *C. glutamicum*. All tested strategies are summarized in the table below (Table 3).\n",
     "\n",
-    "Table 3. Stretegies tested for engineering *C. glutamicum* toward the production of psilocybin. \n",
+    "Table 3. Strategies tested for engineering *C. glutamicum* toward the production of psilocybin. \n",
     "\n",
-    "| Strategy| Link to Jupyter Notebook| Succesfull? (y: yes, n: no) | \n",
-    "|:-:|:-:|:-:|\n",
-    "| Addition of heterologous pathways | | y | \n",
-    "|Prediction of alternative pathways||n|\n",
-    "|Optimization of medium||?|\n",
-    "|Phenotypic phase plane analysis||?|\n",
-    "|Identification of overexpression and downregulation targets||y|\n",
-    "|Identifying co-factor swap targets||n|\n",
-    "|OptGene and OptKnock||n|\n",
-    "\n",
+    "| Strategy|  Succesfull? (y: yes, n: no) | \n",
+    "|:-:|:-:|\n",
+    "| Addition of heterologous pathways | y | \n",
+    "|Prediction of alternative pathways|n|\n",
+    "|Production rate overview and adjusting media|y+n|\n",
+    "|Phenotypic phase plane analysis|y|\n",
+    "|Identification of overexpression and downregulation targets|y|\n",
+    "|Testing manually selected targets for up- and downregulation|y+n|\n",
+    "|OptGene and OptKnock|n|\n",
+    "|Identifying co-factor swap targets|n|\n",
     "\n"
    ]
   },
@@ -216,7 +216,7 @@
        "<a href='1._Add_Psilocybin_to_Coynebacterium_Model.ipynb' target='_blank'>1._Add_Psilocybin_to_Coynebacterium_Model.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
       ]
      },
      "execution_count": 2,
@@ -237,6 +237,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Cameo packages offers the possibility to search for alternative pathways for the production of a desired product. When we used the algorithm, our search resulted in no suggested pathway. This was due to the fact, that psilocybin is not included in the pathway_predictor_obj.universal_model.metabolites, which the algorithm is using for its search. Thus, it was continued with the heterologous psilocybin pathway, which was used previously for psilocybin production in *S. cerevisiae*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -247,7 +254,7 @@
        "<a href='5._Predict_heterologous_pathways.ipynb' target='_blank'>5._Predict_heterologous_pathways.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
       ]
      },
      "execution_count": 3,
@@ -263,7 +270,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 Optimization of medium"
+    "#### 4.3 Production rate overview and adjusting media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The calculation of the max. psilocybin production rate and max yield for production with media set within the model (iCW773) is depicted in the table below.\n",
+    "\n",
+    "| Max. psi production [mmol gDW^-1 h^-1] | 5.69299883708285e-05 |\n",
+    "|:-:|:-:|\n",
+    "| Theoretical max. yield [mmol-psi / mmol-gl] | 1.3830396904616058e-05 |\n",
+    "\n",
+    "Thus, just the itroduction of the psilocybin pathway results in a low max. production rate and theoretical max. yield.\n",
+    "\n",
+    "In order to optimize this, the medium was modified by addition of both, either tryptophan and serine or a bunch of other amino acids, imitating production on complex medium. None of the applied changes in the medium resulted in an increase of the max. psilocybin production. This could be a first indication, that the model iCW773 is not suited for simulating the production of psilocybin in *C. glutamicum*, since the exchange function for the amino acids were already present in the model.\n"
    ]
   },
   {
@@ -274,10 +296,10 @@
     {
      "data": {
       "text/html": [
-       "Path (<tt></tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
+       "<a href='4._Production_Rate_Overview.ipynb' target='_blank'>4._Production_Rate_Overview.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\4._Production_Rate_Overview.ipynb"
       ]
      },
      "execution_count": 4,
@@ -286,14 +308,178 @@
     }
    ],
    "source": [
-    "FileLink(\"\")"
+    "FileLink(\"4._Production_Rate_Overview.ipynb\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.X OptGene, OptKnock and Co-factor swapping\n",
+    "#### 4.5 Phenotypic phase plane analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we need some text here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='3._Phenotype_Phase_Plane_Psilocybin.ipynb' target='_blank'>3._Phenotype_Phase_Plane_Psilocybin.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\3._Phenotype_Phase_Plane_Psilocybin.ipynb"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"3._Phenotype_Phase_Plane_Psilocybin.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.6 Identification of overexpression and downregulation targets\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need some text here. Someone should insert a list of the identified targets here. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='8._FSEOF.ipynb' target='_blank'>8._FSEOF.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\8._FSEOF.ipynb"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"8._FSEOF.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Identified targets were further tested for upregulation. This was done within the Jupyter notebook for Manually_selected_targets (last section of code) (see link below). The upregulation was forced by setting the lower bound of the respective target equal to the upper bound. The numbers of the bounds were not changed, because most of them seemed quite realistic (e.g. 7.6788487). The gene modulation by upregulation of single targets did not result in higher production rates of psilocybin. The simultaneous upregulation of multiple targets was not covered within this project. Also, the modification of multiple targets will result in laborious cloning work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"Manually_selected_targets.ipynb\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7 Testing manually selected targets for overexpression and downregulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since none of the strategies for the optimization of psilocybin production resulted in an increase towards psilocybin, manual selected targets, all related to L-tryptophan, were tested for their potential as gene modification strategy. They were tested for both, knock-out and upregulation. The table below summarizes the respective effects on the psilocybin production. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "|number|reaction_id\t|psilocybin_production [mmol/gDW*h], when knocked out\t| psilocybin_production [mmol/gDW*h], when over-produced|\n",
+    "|:-:|:-:|:-:|:-:|\n",
+    "|0|\tTRPabcpp|\t0.000057|\t0.000000e+00|\n",
+    "|1|\tTRPt2rpp|\t0.000057|\t5.692999e-05|\n",
+    "|2\t|TRPTRS\t|0.000057\t|5.692999e-05|\n",
+    "|3\t|TRPS1\t|0.000057\t|5.692999e-05|\n",
+    "|4\t|TRPS2\t|0.000057\t|5.692999e-05|\n",
+    "|5\t|PROTEIN|\t0.000057\t|3.523657e-19|\n",
+    "|6\t|CrTdc\t|0.000000\t|5.692999e-05|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, this strategy also did not result in an increased production of psilocybin. In needs to be taken into account, that here just the modification of single targets is tested. A combination of knock-outs and up-regulation of targets (either computationally predicted or selected manually) might result in an increase towards the product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"Manually_selected_targets.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.8 OptGene, OptKnock and Co-factor swapping\n",
     "As further strategies, the functions OptGene, OptKnock and Co-factor swapping from the python package Cameo were tested.\n",
     "\n",
     "**OptGene:** \n",
@@ -305,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -316,10 +502,10 @@
        "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,10 +534,10 @@
        "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,13 +552,15 @@
    "source": [
     "**Co-factor swapping** \n",
     "\n",
-    "Co-factors are essential for many metabolic enzymes in order to function properly. Furthermore keeping the balance between co-factors is important for homeostasis. This balance could be unfavorable for metabolic engineering. A good example for such a balance are the co-factors NAD+/NADH and NADP+/NADPH. Actually, there are several enzymes reported to be able to use both as co-factors. Furthermore, it’s possible to engineer enzymes towards use of both co-factor or to change their preference towards another co-factor. In order to identify targets, where co-factor swapping would result in higher production of psilocybin, we tried Cameo’s Co-factor swapping algorithm. As this didn’t result in any suggested targets, co-factor swapping seems to be no promising strategy for our product, psilocybin. "
+    "Co-factors are essential for many metabolic enzymes in order to function properly. Furthermore keeping the balance between co-factors is important for homeostasis. This balance could be unfavorable for metabolic engineering. A good example for such a balance are the co-factors NAD+/NADH and NADP+/NADPH. Actually, there are several enzymes reported to be able to use both as co-factors. Furthermore, it’s possible to engineer enzymes towards use of both co-factor or to change their preference towards another co-factor. In order to identify targets, where co-factor swapping would result in higher production of psilocybin, we tried Cameo’s Co-factor swapping algorithm. As this did not result in any suggested targets, co-factor swapping seems to be no promising strategy for our product, psilocybin. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -380,16 +568,23 @@
        "<a href='6._Cofactor_swapping.ipynb' target='_blank'>6._Cofactor_swapping.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "FileLink(\"6._Cofactor_swapping.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "None of the algorithms OptGene, OptKnock and Co-factor swapping did result in any identified targets for gene modulation. "
    ]
   },
   {
@@ -524,7 +719,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
