Added the PPP section in the report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -216,7 +216,7 @@
        "<a href='1._Add_Psilocybin_to_Coynebacterium_Model.ipynb' target='_blank'>1._Add_Psilocybin_to_Coynebacterium_Model.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
       ]
      },
      "execution_count": 2,
@@ -254,7 +254,7 @@
        "<a href='5._Predict_heterologous_pathways.ipynb' target='_blank'>5._Predict_heterologous_pathways.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
       ]
      },
      "execution_count": 3,
@@ -299,7 +299,7 @@
        "<a href='4._Production_Rate_Overview.ipynb' target='_blank'>4._Production_Rate_Overview.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\4._Production_Rate_Overview.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\4._Production_Rate_Overview.ipynb"
       ]
      },
      "execution_count": 4,
@@ -322,7 +322,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we need some text here."
+    "A phenotype phase plane analysis was performed in the form of production envelopes. These were used to identify the effect of altered medium composition on the production of psilocybin and growth rate. \n",
+    "\n",
+    "Of primary interest was glucose and oxygen, but additional components were investigated, in the form of ammonia, sulfate, phosphate, water, potassium, sodium, and carbon dioxide. \n",
+    "\n",
+    "Oxygen:\n",
+    "\n",
+    "![Graph 1](Pictures/Graph1.png \"Graph 1\")![Graph 2](Pictures/Graph2.png \"Graph 2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The growth rate varies due to the presence of oxygen, as would be expected, and will not work anaerobically under the present medium composition. The psilocybin flux, interestingly, seems to have some other bottleneck. The production rate quickly reaches a constant production rate, as soon as it has the necessary oxygen for production to happen, and as long as there is not enough to produce oxygen toxicity. \n",
+    "\n",
+    "Glucose:\n",
+    "\n",
+    "![Graph 3](Pictures/Graph3.png \"Graph 3\")![Graph 4](Pictures/Graph4.png \"Graph 4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The growth rate reaches a maximum point at sufficient glucose uptake. This likely reflects a divergence of carbon to other sources. Psilocybin production remains high until the point where a negative growth rate would be reached.  \n",
+    "\n",
+    "Other factors: \n",
+    "\n",
+    "Most factors proved to be uninteresting. Ammonia, sulfate, and potassium produced similar psilocybin production rate graphs as oxygen, where it only had to be present in sufficient quantities to be useful. Sodium would not give a result outside of a table, where it seemed to require small concentrations. \n",
+    "\n",
+    "Potassium had a negative effect on production rate, likely reflecting changes to the ion and cofactor composition of the cell. \n",
+    "\n",
+    "![Graph 5](Pictures/Graph5.png \"Graph 5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Meanwhile, carbon dioxide and water were produced by the cell. "
    ]
   },
   {
@@ -336,7 +375,7 @@
        "<a href='3._Phenotype_Phase_Plane_Psilocybin.ipynb' target='_blank'>3._Phenotype_Phase_Plane_Psilocybin.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\3._Phenotype_Phase_Plane_Psilocybin.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\3._Phenotype_Phase_Plane_Psilocybin.ipynb"
       ]
      },
      "execution_count": 5,
@@ -373,7 +412,7 @@
        "<a href='8._FSEOF.ipynb' target='_blank'>8._FSEOF.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\8._FSEOF.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\8._FSEOF.ipynb"
       ]
      },
      "execution_count": 6,
@@ -403,7 +442,7 @@
        "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
       ]
      },
      "execution_count": 7,
@@ -463,7 +502,7 @@
        "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
       ]
      },
      "execution_count": 8,
@@ -502,7 +541,7 @@
        "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
       ]
      },
      "execution_count": 9,
@@ -534,7 +573,7 @@
        "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
       ]
      },
      "execution_count": 10,
@@ -568,7 +607,7 @@
        "<a href='6._Cofactor_swapping.ipynb' target='_blank'>6._Cofactor_swapping.ipynb</a><br>"
       ],
       "text/plain": [
-       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
       ]
      },
      "execution_count": 11,
@@ -719,7 +758,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -733,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
